<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ gcUnicorn
  ~ Copyright (C) 2018  Martin Misiarz
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License version 2
  ~ as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  -->

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/about_background">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/unicorn"
            android:src="@drawable/unicorn"
            android:adjustViewBounds="true"
            android:contentDescription="@string/text_app_name"
            android:layout_gravity="center"
            android:paddingTop="@dimen/indentation_default"
            android:paddingBottom="@dimen/indentation_default"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_app_name"
            android:layout_gravity="center"
            android:paddingTop="@dimen/indentation_half"
            style="@style/AboutTextView"
            app:layout_constraintTop_toBottomOf="@id/unicorn"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_core"
            android:layout_gravity="center"
            android:text="@string/text_app_core"
            style="@style/AboutTextView"
            app:layout_constraintTop_toBottomOf="@id/about_app_name"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_github"
            android:layout_gravity="center"
            android:text="@string/text_github"
            style="@style/AboutTextView"
            app:layout_constraintTop_toBottomOf="@id/about_core"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
